feat: align TTS voice with avatar language

--- a/.env.example
+++ b/.env.example
@@ -50,6 +50,10 @@ DIGITAL_HUMAN_PROVIDER=did
 HEYGEN_API_KEY=xxxxx
 # HEYGEN_CONTEXT_ID=xxxxx
 # HEYGEN_AVATAR_ID=xxxxx
+# AI interviewer voice alignment (Azure TTS)
+# Defaults: zh* -> female voice, other languages -> male voice
+# AI_INTERVIEWER_GENDER=male  # Optional override: male | female
+# AI_INTERVIEWER_TTS_VOICE=en-US-GuyNeural  # Optional override: explicit Azure voice name
 
 # D-ID (Agent SDK + optional streaming endpoints)
 DID_API_KEY=xxxxx
